quick cleanup & refactoring